@@ -978,9 +978,10 @@ enum gcry_pk_algos
     GCRY_PK_RSA_S = 3,      /* (deprecated) */
     GCRY_PK_ELG_E = 16,
     GCRY_PK_DSA   = 17,
+    GCRY_PK_ECC   = 18,     /* Generic ECC.  */
     GCRY_PK_ELG   = 20,
-    GCRY_PK_ECDSA = 301,
-    GCRY_PK_ECDH  = 302
+    GCRY_PK_ECDSA = 301,    /* (deprecated: use 18).  */
+    GCRY_PK_ECDH  = 302     /* (deprecated: use 18).  */
   };
 
 /* Flags describing usage capabilities of a PK algorithm. */
